
[package]
name = "webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
voronoi = "0.1.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[profile.release]
debug = true